added screen share

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -95,6 +95,6 @@ nav{
     /* height: 100vh; */
     margin-top: 12vh;
 }
-/* .home-container .card-text:hover{
+.home-container .card-text:hover{
     font-size: 40px;
-} */
+}
